Bug 1501342 - In ProcessDisplayItems(), handle the case where scrollMetadataASR and mContainerScrollMetadataASR are in different branches of the ASR tree. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D13346

--HG--
extra : moz-landing-system : lando